quick fix on shop mobile opacity issue, remove js on mobile

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1649,6 +1649,11 @@ Modify as content requires.
   .ui.grid > [class*="two column"].row > .column {
     width: 100% !important;
   }
+  .empfehlung{
+    .ui.stackable.grid{
+      text-align: center;
+    }
+  }
 }
 
 @media only screen and (min-width: 992px) {
